feat: enhance evaluation notebook with debug task loading and improved output logging. Working

--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -42,12 +42,18 @@
     "# Control which eval folder to use\n",
     "EVAL_FOLDER_NAME = \"eval_1\"  # Change this to use different eval folders (e.g., \"eval_2\", \"eval_3\")\n",
     "\n",
+    "# File names for processed tasks\n",
+    "NOTION_TASKS_FILE_NAME = \"notion_tasks.json\"\n",
+    "DEBUG_TASKS_FILE_NAME = \"debug_tasks.json\"\n",
+    "\n",
     "# Derived paths\n",
     "EVAL_FOLDER_PATH = settings.LOGS_DIR / EVAL_FOLDER_NAME\n",
-    "NOTION_TASKS_FILE = EVAL_FOLDER_PATH / \"notion_tasks.json\"\n",
+    "NOTION_TASKS_FILE = EVAL_FOLDER_PATH / NOTION_TASKS_FILE_NAME\n",
+    "DEBUG_TASKS_FILE = EVAL_FOLDER_PATH / DEBUG_TASKS_FILE_NAME\n",
     "\n",
     "print(f\"✓ Eval folder: {EVAL_FOLDER_PATH}\")\n",
-    "print(f\"✓ Notion tasks will be saved to: {NOTION_TASKS_FILE}\")"
+    "print(f\"✓ Notion tasks will be saved to: {NOTION_TASKS_FILE}\")\n",
+    "print(f\"✓ Debug tasks will be saved to: {DEBUG_TASKS_FILE}\")"
    ]
   },
   {
@@ -96,10 +102,40 @@
     "    \n",
     "    return titles\n",
     "\n",
+    "def load_and_save_debug_tasks(eval_folder: Path, output_file: Path) -> list[dict]:\n",
+    "    \"\"\"\n",
+    "    Load debug tasks from markdown files and save to JSON.\n",
+    "    \n",
+    "    Args:\n",
+    "        eval_folder: Folder containing debug task markdown files\n",
+    "        output_file: Path to save the JSON file\n",
+    "    \n",
+    "    Returns:\n",
+    "        List of debug task model dicts\n",
+    "    \"\"\"\n",
+    "    debug_files = get_debug_task_files(eval_folder)\n",
+    "    debug_tasks = []\n",
+    "    \n",
+    "    for file in debug_files:\n",
+    "        task_model = extract_task_model_from_debug_file(file)\n",
+    "        if task_model:\n",
+    "            debug_tasks.append(task_model)\n",
+    "    \n",
+    "    # Save as JSON\n",
+    "    output_file.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "        json.dump(debug_tasks, f, indent=2, ensure_ascii=False)\n",
+    "    \n",
+    "    return debug_tasks\n",
+    "\n",
     "# Test: Get debug task titles\n",
     "debug_titles = get_debug_task_titles(EVAL_FOLDER_PATH)\n",
     "print(f\"✓ Found {len(debug_titles)} debug tasks\")\n",
-    "print(f\"Sample titles: {debug_titles[:3]}\")"
+    "print(f\"Sample titles: {debug_titles[:3]}\")\n",
+    "\n",
+    "# Load and save debug tasks to JSON\n",
+    "debug_tasks_loaded = load_and_save_debug_tasks(EVAL_FOLDER_PATH, DEBUG_TASKS_FILE)\n",
+    "print(f\"✓ Loaded and saved {len(debug_tasks_loaded)} debug tasks to {DEBUG_TASKS_FILE}\")"
    ]
   },
   {
@@ -184,11 +220,16 @@
     "    # Extract title\n",
     "    title = get_block_plain_text(notion_page)\n",
     "    \n",
-    "    # Extract properties\n",
-    "    importance_select = props.get('Importance', {}).get('select')\n",
-    "    urgency_select = props.get('Urgency', {}).get('select')\n",
-    "    ai_status_select = props.get('UseAIStatus', {}).get('select')\n",
-    "    ai_usefulness_select = props.get('AIUsefulness', {}).get('select')\n",
+    "    # Extract properties using reusable helper\n",
+    "    importance = extract_property_value(props.get('Importance'))\n",
+    "    urgency = extract_property_value(props.get('Urgency'))\n",
+    "    ai_status = extract_property_value(props.get('UseAIStatus'))\n",
+    "    ai_usefulness = extract_property_value(props.get('AIUsefulness'))\n",
+    "    impact = extract_property_value(props.get('Impact Score'))\n",
+    "    \n",
+    "    # Convert string importance/urgency to int if available\n",
+    "    importance = int(importance) if importance else None\n",
+    "    urgency = int(urgency) if urgency else None\n",
     "    \n",
     "    # Extract project relations\n",
     "    project_relations = props.get('Project', {}).get('relation', [])\n",
@@ -197,11 +238,11 @@
     "    return {\n",
     "        'id': notion_page['id'],\n",
     "        'title': title,\n",
-    "        'importance': int(importance_select['name']) if importance_select else None,\n",
-    "        'urgency': int(urgency_select['name']) if urgency_select else None,\n",
-    "        'impact': props.get('Impact Score', {}).get('number'),\n",
-    "        'ai_use_status': ai_status_select['name'] if ai_status_select else None,\n",
-    "        'ai_usefulness': ai_usefulness_select['name'] if ai_usefulness_select else None,\n",
+    "        'importance': importance,\n",
+    "        'urgency': urgency,\n",
+    "        'impact': impact,\n",
+    "        'ai_use_status': ai_status,\n",
+    "        'ai_usefulness': ai_usefulness,\n",
     "        'project_ids': project_ids,\n",
     "        'created_time': notion_page.get('created_time'),\n",
     "        'last_edited_time': notion_page.get('last_edited_time')\n",
@@ -233,42 +274,34 @@
    "source": [
     "# ============ STEP 4: Load and Pair Tasks ============\n",
     "\n",
-    "def load_notion_tasks(json_file: Path) -> list[dict]:\n",
-    "    \"\"\"Load parsed Notion tasks from JSON file.\"\"\"\n",
+    "def load_tasks_from_json(json_file: Path) -> list[dict]:\n",
+    "    \"\"\"\n",
+    "    Generic loader for tasks from JSON file.\n",
+    "    Works for both Notion tasks and debug tasks.\n",
+    "    \"\"\"\n",
     "    if not json_file.exists():\n",
     "        return []\n",
     "    \n",
     "    with open(json_file, 'r', encoding='utf-8') as f:\n",
     "        return json.load(f)\n",
     "\n",
-    "def load_debug_tasks_with_models(eval_folder: Path) -> dict[str, dict]:\n",
+    "def create_task_pairs(notion_tasks_file: Path, debug_tasks_file: Path) -> list[tuple[dict, dict]]:\n",
     "    \"\"\"\n",
-    "    Load all debug tasks from eval folder with their task models extracted.\n",
+    "    Create pairs of (notion_task, debug_task) for evaluation by matching titles.\n",
     "    \n",
-    "    Returns:\n",
-    "        Dict mapping task title to task model dict\n",
-    "    \"\"\"\n",
-    "    debug_files = get_debug_task_files(eval_folder)\n",
-    "    tasks_by_title = {}\n",
-    "    \n",
-    "    for file in debug_files:\n",
-    "        task_model = extract_task_model_from_debug_file(file)\n",
-    "        if task_model and 'title' in task_model:\n",
-    "            title = task_model['title']\n",
-    "            tasks_by_title[title] = task_model\n",
-    "    \n",
-    "    return tasks_by_title\n",
-    "\n",
-    "def create_task_pairs(eval_folder: Path, notion_tasks_file: Path) -> list[tuple[dict, dict]]:\n",
-    "    \"\"\"\n",
-    "    Create pairs of (notion_task, debug_task) for evaluation.\n",
+    "    Args:\n",
+    "        notion_tasks_file: Path to Notion tasks JSON file\n",
+    "        debug_tasks_file: Path to debug tasks JSON file\n",
     "    \n",
     "    Returns:\n",
     "        List of tuples where each tuple is (notion_task_dict, debug_task_model_dict)\n",
     "    \"\"\"\n",
-    "    # Load both datasets\n",
-    "    notion_tasks = load_notion_tasks(notion_tasks_file)\n",
-    "    debug_tasks = load_debug_tasks_with_models(eval_folder)\n",
+    "    # Load both datasets from JSON files\n",
+    "    notion_tasks = load_tasks_from_json(notion_tasks_file)\n",
+    "    debug_tasks = load_tasks_from_json(debug_tasks_file)\n",
+    "    \n",
+    "    # Create dict for O(1) lookup by title\n",
+    "    debug_tasks_by_title = {task['title']: task for task in debug_tasks}\n",
     "    \n",
     "    # Create pairs based on matching titles\n",
     "    pairs = []\n",
@@ -276,12 +309,12 @@
     "    \n",
     "    for notion_task in notion_tasks:\n",
     "        title = notion_task['title']\n",
-    "        if title in debug_tasks:\n",
-    "            pairs.append((notion_task, debug_tasks[title]))\n",
+    "        if title in debug_tasks_by_title:\n",
+    "            pairs.append((notion_task, debug_tasks_by_title[title]))\n",
     "            matched_titles.add(title)\n",
     "    \n",
     "    # Report unmatched tasks\n",
-    "    unmatched_debug = set(debug_tasks.keys()) - matched_titles\n",
+    "    unmatched_debug = set(debug_tasks_by_title.keys()) - matched_titles\n",
     "    unmatched_notion = {t['title'] for t in notion_tasks} - matched_titles\n",
     "    \n",
     "    print(f\"✓ Created {len(pairs)} task pairs\")\n",
@@ -295,7 +328,7 @@
     "    return pairs\n",
     "\n",
     "# Create task pairs\n",
-    "task_pairs = create_task_pairs(EVAL_FOLDER_PATH, NOTION_TASKS_FILE)\n",
+    "task_pairs = create_task_pairs(NOTION_TASKS_FILE, DEBUG_TASKS_FILE)\n",
     "print(f\"\\n{'='*60}\")\n",
     "print(f\"EVALUATION DATASET READY\")\n",
     "print(f\"{'='*60}\")\n",
@@ -375,23 +408,48 @@
     "print(\"\\n📦 Available data structures:\")\n",
     "print(f\"  task_pairs:           {len(task_pairs)} pairs of (notion_task, debug_task)\")\n",
     "print(f\"  notion_tasks_parsed:  {len(notion_tasks_parsed)} Notion tasks\")\n",
+    "print(f\"  debug_tasks_loaded:   {len(debug_tasks_loaded)} debug tasks\")\n",
     "print(f\"  debug_titles:         {len(debug_titles)} debug task titles\")\n",
     "print(f\"\\n💾 Files:\")\n",
     "print(f\"  {NOTION_TASKS_FILE}\")\n",
+    "print(f\"  {DEBUG_TASKS_FILE}\")\n",
     "print(f\"\\n🔧 Helper functions:\")\n",
     "print(f\"  inspect_pair(index) - Detailed view of a task pair\")\n",
+    "print(f\"  load_tasks_from_json(file) - Generic JSON loader for tasks\")\n",
     "print(f\"  get_debug_task_files() - List all debug task markdown files\")\n",
-    "print(f\"  load_notion_tasks() - Reload Notion tasks from JSON\")\n",
+    "print(f\"  create_task_pairs(notion_file, debug_file) - Create pairs from JSON files\")\n",
     "\n",
     "print(f\"\\n{'='*70}\")\n",
     "print(\"Ready for evaluation! 🚀\")\n",
     "print(f\"{'='*70}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df8605df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "NotionInboxAgent",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
