added visualization, analysis functionality to evaluate notebook. Installed numpy and matplotlib as dev pckgs

--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -425,6 +425,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b5da484",
+   "metadata": {},
+   "source": [
+    "## Analysis & Metrics\n",
+    "\n",
+    "This section computes evaluation metrics comparing debug tasks (expected) with Notion tasks (actual)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c4cfaec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports for analysis\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from collections import Counter\n",
+    "\n",
+    "print(\"✓ Analysis libraries loaded\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1903bda1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============ COMPUTE METRICS ============\n",
+    "\n",
+    "def compute_metrics(pairs: list[tuple[dict, dict]]) -> dict:\n",
+    "    \"\"\"\n",
+    "    Compute accuracy metrics for each property.\n",
+    "    \n",
+    "    Args:\n",
+    "        pairs: List of (notion_task, debug_task) tuples\n",
+    "    \n",
+    "    Returns:\n",
+    "        Dict with metric summaries\n",
+    "    \"\"\"\n",
+    "    if not pairs:\n",
+    "        return {}\n",
+    "    \n",
+    "    n = len(pairs)\n",
+    "    \n",
+    "    # Initialize counters\n",
+    "    importance_correct = 0\n",
+    "    urgency_correct = 0\n",
+    "    ai_status_correct = 0\n",
+    "    impact_diffs = []\n",
+    "    \n",
+    "    for notion_task, debug_task in pairs:\n",
+    "        # Importance\n",
+    "        if notion_task['importance'] == debug_task['importance']:\n",
+    "            importance_correct += 1\n",
+    "        \n",
+    "        # Urgency\n",
+    "        if notion_task['urgency'] == debug_task['urgency']:\n",
+    "            urgency_correct += 1\n",
+    "        \n",
+    "        # AI Status\n",
+    "        if notion_task['ai_use_status'] == debug_task['ai_use_status']:\n",
+    "            ai_status_correct += 1\n",
+    "        \n",
+    "        # Impact (MAE)\n",
+    "        if notion_task['impact'] is not None and debug_task['impact'] is not None:\n",
+    "            diff = abs(notion_task['impact'] - debug_task['impact'])\n",
+    "            impact_diffs.append(diff)\n",
+    "    \n",
+    "    metrics = {\n",
+    "        'n_pairs': n,\n",
+    "        'importance_accuracy': importance_correct / n,\n",
+    "        'urgency_accuracy': urgency_correct / n,\n",
+    "        'ai_status_accuracy': ai_status_correct / n,\n",
+    "        'impact_mae': np.mean(impact_diffs) if impact_diffs else None,\n",
+    "        'impact_rmse': np.sqrt(np.mean([d**2 for d in impact_diffs])) if impact_diffs else None\n",
+    "    }\n",
+    "    \n",
+    "    return metrics\n",
+    "\n",
+    "# Compute and display metrics\n",
+    "metrics = compute_metrics(task_pairs)\n",
+    "\n",
+    "print(\"📊 EVALUATION METRICS\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"Sample size: {metrics['n_pairs']} task pairs\")\n",
+    "print()\n",
+    "print(f\"Importance Accuracy:  {metrics['importance_accuracy']:.2%}\")\n",
+    "print(f\"Urgency Accuracy:     {metrics['urgency_accuracy']:.2%}\")\n",
+    "print(f\"AI Status Accuracy:   {metrics['ai_status_accuracy']:.2%}\")\n",
+    "print(f\"Impact MAE:           {metrics['impact_mae']:.3f}\" if metrics['impact_mae'] else \"Impact MAE:           N/A\")\n",
+    "print(f\"Impact RMSE:          {metrics['impact_rmse']:.3f}\" if metrics['impact_rmse'] else \"Impact RMSE:          N/A\")\n",
+    "print(\"=\"*60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa07f4cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============ DISTRIBUTION PLOTS ============\n",
+    "\n",
+    "def plot_distributions(pairs: list[tuple[dict, dict]]):\n",
+    "    \"\"\"Create distribution plots comparing predicted vs actual for each property.\"\"\"\n",
+    "    \n",
+    "    # Extract data\n",
+    "    notion_importance = [n['importance'] for n, d in pairs if n['importance'] is not None]\n",
+    "    debug_importance = [d['importance'] for n, d in pairs if d['importance'] is not None]\n",
+    "    \n",
+    "    notion_urgency = [n['urgency'] for n, d in pairs if n['urgency'] is not None]\n",
+    "    debug_urgency = [d['urgency'] for n, d in pairs if d['urgency'] is not None]\n",
+    "    \n",
+    "    notion_ai_status = [n['ai_use_status'] for n, d in pairs if n['ai_use_status'] is not None]\n",
+    "    debug_ai_status = [d['ai_use_status'] for n, d in pairs if d['ai_use_status'] is not None]\n",
+    "    \n",
+    "    # Create figure\n",
+    "    fig, axes = plt.subplots(1, 3, figsize=(15, 4))\n",
+    "    fig.suptitle('Property Distributions: Notion (Actual) vs Debug (Expected)', fontsize=14, fontweight='bold')\n",
+    "    \n",
+    "    # Importance distribution\n",
+    "    if notion_importance and debug_importance:\n",
+    "        counts_n = Counter(notion_importance)\n",
+    "        counts_d = Counter(debug_importance)\n",
+    "        labels = sorted(set(notion_importance + debug_importance))\n",
+    "        \n",
+    "        x = np.arange(len(labels))\n",
+    "        width = 0.35\n",
+    "        \n",
+    "        axes[0].bar(x - width/2, [counts_n.get(l, 0) for l in labels], width, label='Notion', alpha=0.8)\n",
+    "        axes[0].bar(x + width/2, [counts_d.get(l, 0) for l in labels], width, label='Debug', alpha=0.8)\n",
+    "        axes[0].set_xlabel('Importance Value')\n",
+    "        axes[0].set_ylabel('Count')\n",
+    "        axes[0].set_title('Importance')\n",
+    "        axes[0].set_xticks(x)\n",
+    "        axes[0].set_xticklabels(labels)\n",
+    "        axes[0].legend()\n",
+    "        axes[0].grid(axis='y', alpha=0.3)\n",
+    "    \n",
+    "    # Urgency distribution\n",
+    "    if notion_urgency and debug_urgency:\n",
+    "        counts_n = Counter(notion_urgency)\n",
+    "        counts_d = Counter(debug_urgency)\n",
+    "        labels = sorted(set(notion_urgency + debug_urgency))\n",
+    "        \n",
+    "        x = np.arange(len(labels))\n",
+    "        width = 0.35\n",
+    "        \n",
+    "        axes[1].bar(x - width/2, [counts_n.get(l, 0) for l in labels], width, label='Notion', alpha=0.8)\n",
+    "        axes[1].bar(x + width/2, [counts_d.get(l, 0) for l in labels], width, label='Debug', alpha=0.8)\n",
+    "        axes[1].set_xlabel('Urgency Value')\n",
+    "        axes[1].set_ylabel('Count')\n",
+    "        axes[1].set_title('Urgency')\n",
+    "        axes[1].set_xticks(x)\n",
+    "        axes[1].set_xticklabels(labels)\n",
+    "        axes[1].legend()\n",
+    "        axes[1].grid(axis='y', alpha=0.3)\n",
+    "    \n",
+    "    # AI Status distribution\n",
+    "    if notion_ai_status and debug_ai_status:\n",
+    "        counts_n = Counter(notion_ai_status)\n",
+    "        counts_d = Counter(debug_ai_status)\n",
+    "        labels = sorted(set(notion_ai_status + debug_ai_status))\n",
+    "        \n",
+    "        x = np.arange(len(labels))\n",
+    "        width = 0.35\n",
+    "        \n",
+    "        axes[2].bar(x - width/2, [counts_n.get(l, 0) for l in labels], width, label='Notion', alpha=0.8)\n",
+    "        axes[2].bar(x + width/2, [counts_d.get(l, 0) for l in labels], width, label='Debug', alpha=0.8)\n",
+    "        axes[2].set_xlabel('AI Use Status')\n",
+    "        axes[2].set_ylabel('Count')\n",
+    "        axes[2].set_title('AI Use Status')\n",
+    "        axes[2].set_xticks(x)\n",
+    "        axes[2].set_xticklabels([str(l) for l in labels], rotation=15, ha='right')\n",
+    "        axes[2].legend()\n",
+    "        axes[2].grid(axis='y', alpha=0.3)\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Create distribution plots\n",
+    "plot_distributions(task_pairs)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "df8605df",
