added saving config (hardcoded)

--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -505,6 +505,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "772af967",
+   "metadata": {},
+   "source": [
+    "### CONFIG (HARD CODED YET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b3f777e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from inbox_agent.pydantic_models import DEFAULT_APP_CONFIG\n",
+    "\n",
+    "config = DEFAULT_APP_CONFIG.model_copy()\n",
+    "config.metadata.model.model_name = 'gemma-3-27b-it'\n",
+    "config.ranking.executor_model.model_name = 'gemma-3-12b-it'\n",
+    "config.enrichment.model.model_name = 'gemma-3-12b-it'\n",
+    "config.ranking.judge_model.model_name = 'gemma-3-27b-it'\n",
+    "\n",
+    "path = EVAL_FOLDER_PATH / \"config.json\"\n",
+    "if path.exists():\n",
+    "    raise FileExistsError(f\"Config file already exists at {path}. Please remove it before running this script to avoid overwriting.\")\n",
+    "\n",
+    "with open(path, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(config.model_dump_json(), f, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7b5da484",
    "metadata": {},
    "source": [
