added loading in analysis for easier startup

--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -570,7 +570,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
+   "id": "dcda4db3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Created 19 task pairs\n",
+      "⚠ 1 debug tasks not retrieved from Notion (skipped)\n",
+      "Total pairs: 19\n",
+      "\n",
+      "Sample pair:\n",
+      "  Notion task: Address Trace Building vs. Optimization Disagreement\n",
+      "  Debug task:  Address Trace Building vs. Optimization Disagreement\n"
+     ]
+    }
+   ],
+   "source": [
+    "task_pairs = create_task_pairs(NOTION_TASKS_FILE, DEBUG_TASKS_FILE)\n",
+    "print(f\"Total pairs: {len(task_pairs)}\")\n",
+    "if task_pairs:\n",
+    "    print(f\"\\nSample pair:\")\n",
+    "    print(f\"  Notion task: {task_pairs[0][0]['title']}\")\n",
+    "    print(f\"  Debug task:  {task_pairs[0][1]['title']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "1903bda1",
    "metadata": {},
    "outputs": [
@@ -583,7 +612,9 @@
       "METRIC                         VALUE\n",
       "------------------------------------------------------------\n",
       "Importance MAE                 0.421\n",
+      "Importance Acc                57.9%\n",
       "Urgency MAE                    0.526\n",
+      "Urgency Acc                   68.4%\n",
       "AI Status Acc                  5.3%\n",
       "Impact MAE                     0.263\n",
       "Top-3 Project Acc             50.0%\n",
@@ -676,7 +707,9 @@
     "    \n",
     "    results = {\n",
     "        \"Importance MAE\": calculate_mae(pairs, \"importance\"),\n",
+    "        \"Importance Acc\": calculate_accuracy(pairs, \"importance\"),\n",
     "        \"Urgency MAE\": calculate_mae(pairs, \"urgency\"),\n",
+    "        \"Urgency Acc\": calculate_accuracy(pairs, \"urgency\"),\n",
     "        \"AI Status Acc\": calculate_accuracy(pairs, \"ai_use_status\"),\n",
     "        \"Impact MAE\": calculate_mae(pairs, \"impact\"),\n",
     "        \"Top-3 Project Acc\": calculate_top_k_project_accuracy(pairs, k=3),\n",
