Refactor metadata processing to replace action types with boolean 'do_now' flag
- Removed ActionType enum and replaced action classifications with a boolean 'do_now' in NoteClassification and related models.
- Updated MetadataProcessor to directly use the 'do_now' flag for classification.
- Adjusted logging and task creation logic in run.py to reflect the new classification structure.
- Modified tests to accommodate changes in metadata result structure and ensure proper functionality.

--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cf074fb0",
    "metadata": {},
    "outputs": [
@@ -297,6 +297,7 @@
     "        \"Urgency\",        # urgency\n",
     "        \"Impact Score\",   # impact\n",
     "        \"UseAIStatus\",    # ai_use_status\n",
+    "        \"Do Now\",         # do_now (checkbox)\n",
     "        \"AIUsefulness\"    # additional evaluation property\n",
     "    ]\n",
     "    \n",
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5efcf304",
    "metadata": {},
    "outputs": [
@@ -359,10 +360,19 @@
     "    ai_status = extract_property_value(props.get('UseAIStatus'))\n",
     "    ai_usefulness = extract_property_value(props.get('AIUsefulness'))\n",
     "    impact = extract_property_value(props.get('Impact Score'))\n",
+    "    do_now = extract_property_value(props.get('Do Now'))\n",
     "    \n",
     "    # Convert string importance/urgency to int if available\n",
     "    importance = int(importance) if importance else None\n",
     "    urgency = int(urgency) if urgency else None\n",
+    "    \n",
+    "    # Convert do_now to bool (Notion checkbox returns True/False or string)\n",
+    "    if isinstance(do_now, str):\n",
+    "        do_now = do_now.lower() in ('true', '1', 'yes', 'True')\n",
+    "    elif do_now is None:\n",
+    "        do_now = False\n",
+    "    else:\n",
+    "        do_now = bool(do_now)\n",
     "    \n",
     "    # Extract project relations and convert IDs to titles\n",
     "    project_relations = props.get('Project', {}).get('relation', [])\n",
@@ -376,6 +386,7 @@
     "        'impact': impact,\n",
     "        'ai_use_status': ai_status,\n",
     "        'ai_usefulness': ai_usefulness,\n",
+    "        'do_now': do_now,\n",
     "        'projects': project_titles,\n",
     "        'created_time': notion_page.get('created_time'),\n",
     "        'last_edited_time': notion_page.get('last_edited_time')\n",
