added isolated evalution for ranking based on correct projs from holdout set. - load json tasks moved to utils - filtering only mutual existing props in eval notebook

--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "38005dcd",
    "metadata": {},
    "outputs": [
@@ -447,28 +447,23 @@
    "source": [
     "# ============ STEP 4: Load and Pair Tasks ============\n",
     "\n",
-    "def load_tasks_from_json(json_file: Path) -> list[dict]:\n",
-    "    \"\"\"\n",
-    "    Generic loader for tasks from JSON file.\n",
-    "    Works for both Notion tasks and debug tasks.\n",
-    "    \"\"\"\n",
-    "    if not json_file.exists():\n",
-    "        return []\n",
-    "    \n",
-    "    with open(json_file, 'r', encoding='utf-8') as f:\n",
-    "        return json.load(f)\n",
+    "from inbox_agent.utils import load_tasks_from_json\n",
     "\n",
     "def create_task_pairs(notion_tasks_file: Path, debug_tasks_file: Path) -> list[tuple[dict, dict]]:\n",
     "    \"\"\"\n",
     "    Create pairs of (notion_task, debug_task) for evaluation by matching titles.\n",
     "    Skips debug tasks not found in Notion (task wasn't retrieved).\n",
     "    \n",
+    "    Only includes properties that exist in BOTH datasets. This allows using\n",
+    "    ranking_results.json as debug_tasks which only has ranking fields.\n",
+    "    \n",
     "    Args:\n",
     "        notion_tasks_file: Path to Notion tasks JSON file\n",
-    "        debug_tasks_file: Path to debug tasks JSON file\n",
+    "        debug_tasks_file: Path to debug tasks JSON file (or ranking_results.json)\n",
     "    \n",
     "    Returns:\n",
-    "        List of tuples where each tuple is (notion_task_dict, debug_task_model_dict)\n",
+    "        List of tuples where each tuple is (notion_task_dict, debug_task_dict)\n",
+    "        Both dicts contain only properties present in both original datasets\n",
     "    \"\"\"\n",
     "    # Load both datasets from JSON files\n",
     "    notion_tasks = load_tasks_from_json(notion_tasks_file)\n",
@@ -478,9 +473,22 @@
     "        print(\"⚠ No tasks to pair: notion_tasks or debug_tasks is empty\")\n",
     "        return []\n",
     "    \n",
+    "    # Determine common properties (excluding 'title' which is for matching)\n",
+    "    if notion_tasks and debug_tasks:\n",
+    "        notion_props = set(notion_tasks[0].keys()) if notion_tasks else set()\n",
+    "        debug_props = set(debug_tasks[0].keys()) if debug_tasks else set()\n",
+    "        common_props = (notion_props & debug_props) - {'title'}  # Exclude title from comparison\n",
+    "        \n",
+    "        print(f\"ℹ Common properties for comparison: {sorted(common_props)}\")\n",
+    "        if notion_props - debug_props - {'title'}:\n",
+    "            print(f\"ℹ Notion-only properties (excluded): {sorted(notion_props - debug_props - {'title'})}\")\n",
+    "        if debug_props - notion_props - {'title'}:\n",
+    "            print(f\"ℹ Debug-only properties (excluded): {sorted(debug_props - notion_props - {'title'})}\")\n",
+    "    else:\n",
+    "        common_props = set()\n",
+    "    \n",
     "    # Create dict for O(1) lookup by title\n",
     "    notion_tasks_by_title = {task.get('title'): task for task in notion_tasks if task.get('title')}\n",
-    "    debug_tasks_by_title = {task.get('title'): task for task in debug_tasks if task.get('title')}\n",
     "    \n",
     "    # Create pairs based on matching titles - iterate through debug to identify missing\n",
     "    pairs = []\n",
@@ -491,7 +499,19 @@
     "        if not title:\n",
     "            continue\n",
     "        if title in notion_tasks_by_title:\n",
-    "            pairs.append((notion_tasks_by_title[title], debug_task))\n",
+    "            notion_task = notion_tasks_by_title[title]\n",
+    "            \n",
+    "            # Filter both to only include common properties + title\n",
+    "            filtered_notion = {'title': title}\n",
+    "            filtered_debug = {'title': title}\n",
+    "            \n",
+    "            for prop in common_props:\n",
+    "                if prop in notion_task:\n",
+    "                    filtered_notion[prop] = notion_task[prop]\n",
+    "                if prop in debug_task:\n",
+    "                    filtered_debug[prop] = debug_task[prop]\n",
+    "            \n",
+    "            pairs.append((filtered_notion, filtered_debug))\n",
     "        else:\n",
     "            unmatched_debug.append(title)\n",
     "    \n",
@@ -511,7 +531,7 @@
     "if task_pairs:\n",
     "    print(f\"\\nSample pair:\")\n",
     "    print(f\"  Notion task: {task_pairs[0][0]['title']}\")\n",
-    "    print(f\"  Debug task:  {task_pairs[0][1]['title']}\")"
+    "    print(f\"  Debug task:  {task_pairs[0][1]['title']}\")\n"
    ]
   },
   {
