feat: comparing mismatch tasks based on a prop, printing enhanced

--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ea027247",
    "metadata": {},
    "outputs": [
@@ -873,19 +873,24 @@
      "text": [
       "\n",
       "==========================================================================================\n",
-      "TASK COMPARISON SLIDE: VALIDATE PREOPTIMIZATION VS. PLANNING\n",
+      "TASK COMPARISON SLIDE: CHALLENGE ASSUMPTIONS IN WORKFLOW\n",
       "==========================================================================================\n",
       "PROPERTY           | NOTION (Actual)          | DEBUG (Intent)           | MATCH\n",
       "------------------------------------------------------------------------------------------\n",
-      "importance         | 3                        | 3                        | ✓\n",
-      "urgency            | 2                        | 2                        | ✓\n",
-      "impact             | 25                       | 25                       | ✓\n",
+      "importance         | 2                        | 3                        | ✗\n",
+      "urgency            | 1                        | 1                        | ✓\n",
+      "impact             | 20                       | 25                       | ✗\n",
       "ai_use_status      | ambiguous                | None                     | ✗\n",
       "\n",
       "------------------------------------------------------------------------------------------\n",
       "AI FEEDBACK LOOP\n",
       "  AIUsefulness:  NOT RATED\n",
       "  Confidence:    0.85\n",
+      "\n",
+      "------------------------------------------------------------------------------------------\n",
+      "ORIGINAL NOTE CONTENT\n",
+      "  so many people work unoptimized. They don't want to think and judge. They can't do it. It's easy and habitual to follow the trodden path. Avoid it.\n",
+      "\n",
       "\n",
       "------------------------------------------------------------------------------------------\n",
       "ENRICHMENT DELTA\n",
@@ -946,16 +951,38 @@
     "    print(\"AI FEEDBACK LOOP\")\n",
     "    print(f\"  AIUsefulness:  {n.get('ai_usefulness', 'NOT RATED')}\")\n",
     "    print(f\"  Confidence:    {float(d.get('confidence') or 0.0):.2f}\")\n",
+    "\n",
+    "    print(\"\\n\" + \"-\" * 90)\n",
+    "    print(\"ORIGINAL NOTE CONTENT\")\n",
+    "    original_note = n.get('original_note') or d.get('original_note', 'N/A')\n",
+    "    print(f\"  {str(original_note)[:280]}{'...' if len(str(original_note)) > 280 else ''}\")\n",
     "    \n",
     "    enr = d.get(\"enrichment\") or \"N/A\"\n",
     "    print(\"\\n\" + \"-\" * 90)\n",
     "    print(\"ENRICHMENT DELTA\")\n",
     "    print(f\"  {str(enr)[:280]}{'...' if len(str(enr)) > 280 else ''}\")\n",
     "    print(f\"{'='*90}\\n\")\n",
+    "    \n",
+    "def compare_property_mismatch_task_slides(pairs=None, prop='importance'):\n",
+    "    \"\"\"Iterate through pairs and show slides for those with any property mismatch.\"\"\"\n",
+    "    if not pairs or not isinstance(pairs, list):\n",
+    "        print(\"No task pairs available.\")\n",
+    "        return\n",
+    "    \n",
+    "    for i, pair in enumerate(pairs):\n",
+    "        if pair is None or len(pair) < 2:\n",
+    "            continue\n",
+    "        n, d = pair\n",
+    "        if n is None or d is None:\n",
+    "            continue\n",
+    "        \n",
+    "        if n.get(prop) != d.get(prop):\n",
+    "            compare_task_slide(i, pairs)\n",
     "\n",
     "# Example: Inspect first pair\n",
     "if task_pairs:\n",
-    "    compare_task_slide(15)"
+    "    #compare_task_slide(15)\n",
+    "    compare_property_mismatch_task_slides(task_pairs, prop='importance')"
    ]
   },
   {
